tests/istio_testcases/example_policies/bookinfo-demo/bookinfo-policy-equiv-principals-by-condition-3.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "details-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: details
  action: ALLOW
  rules:
  - when:
    - key: source.principal
      values: ["cluster.local/ns/default/sa/bookinfo-productpage"]
      notValues: ["cluster.local/ns/default/sa/bookinfo-productpage"]

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: default
spec:
  action: ALLOW
  # the rules field is not specified, and the policy will never match.
