tests/istio_testcases/example_policies/bookinfo-demo/bookinfo-policy-test-equiv-properties-cubes.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "details-viewer-cube-1"
  namespace: default
spec:
  selector:
    matchLabels:
      app: details
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/default/sa/bookinfo-productpage"]
      to:
        - operation:
            methods: ["GET"]
            paths: ["/foo*"]
        - operation:
            methods: ["PUT"]
            paths: [ "/foo/bar*" ]


---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "details-viewer-cube-2"
  namespace: default
spec:
  selector:
    matchLabels:
      app: details
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/default/sa/bookinfo-productpage"]
      to:
        - operation:
            methods: ["GET"]
            paths: ["/foo*"]
            notPaths: [ "/foo/bar*" ]
        - operation:
            methods: ["PUT", "GET"]
            paths: [ "/foo/bar*" ]
