tests/istio_testcases/example_policies/bookinfo-demo/bookinfo-policy-test-methods-3-differently-written.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "details-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: details
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/default/sa/bookinfo-productpage"]
      to:
        - operation:
            methods: ["*AD", "*E", "*S", "TRACE", "*CH"]

---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "reviews-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: reviews
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/default/sa/bookinfo-productpage"]
      to:
        - operation:
            methods: ["*T", "*H"]
            notMethods: ["CONNECT", "*ET"]

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "ratings-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: ratings
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/default/sa/bookinfo-reviews"]
      to:
        - operation:
            methods: ["POST", "PUT", "*CT"]

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: default
spec:
  action: ALLOW
  # the rules field is not specified, and the policy will never match.

---
  apiVersion: security.istio.io/v1beta1
  kind: AuthorizationPolicy
  metadata:
    name: "allow-all-methods"
    namespace: default
  spec:
    selector:
      matchLabels:
        app: productpage
    action: ALLOW
    rules:
      - from:
          - source:
              principals: [ "cluster.local/ns/default/sa/bookinfo-reviews" ]
        to:
          - operation:
              methods: ['P*', "*T", "HEAD", "DELETE", "OPTIONS", "TRACE"]

---
  apiVersion: security.istio.io/v1beta1
  kind: AuthorizationPolicy
  metadata:
    name: "allow-no-methods"
    namespace: default
  spec:
    selector:
      matchLabels:
        app: productpage
    action: ALLOW
    rules:
      - from:
          - source:
              principals: [ "cluster.local/ns/default/sa/bookinfo-details" ]
        to:
          - operation:
              notMethods: ['*']
