tests/istio_testcases/example_policies/bookinfo-demo/bookinfo-policy-test-methods-paths.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: details-viewer-attr-ports-80-90
  namespace: default
spec:
  selector:
    matchLabels:
      app: details
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/default/sa/bookinfo-productpage"]
      to:
        - operation:
            notHosts: ["disallowed-host.com"]
            methods: ["GET", "PUT"]
            ports: ["80","90"]
            paths: ["/good_path1", "/good_path2", "/some/path1", "/some/path2"]
            notPaths: ["/bad/path1", "/some/path1"]
---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: details-viewer-attr-not-port-90
  namespace: default
spec:
  selector:
    matchLabels:
      app: details
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/default/sa/bookinfo-productpage"]
      to:
        - operation:
            hosts: ["allowed-host.com"]
            notMethods: ["PUT"]
            notPorts: ["90"]
            notPaths: ["/bad/path1", "/bad/path3", "/some/path2"]
---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: details-viewer-attr-port-100-nothing
  namespace: default
spec:
  selector:
    matchLabels:
      app: details
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/default/sa/bookinfo-productpage"]
      to:
        - operation:
            ports: ["100"]
            paths: ["/some/path3"]
            #notPaths: ["/some/path3"]
---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: default
spec:
  action: ALLOW
  # the rules field is not specified, and the policy will never match.
