tests/istio_testcases/example_policies/bookinfo-demo/bookinfo-policy-test-operation-allow-example-1.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-example-1
  namespace: default
spec:
  selector:
    matchLabels:
      app: details
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/default/sa/bookinfo-productpage"]
        - source:
            namespaces: ["test"]
      to:
        - operation:
            methods: ["GET"]
            paths:  ["/info*"]
        - operation:
            methods: ["P*"]
            paths: ["/data"]

---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: default
spec:
  action: ALLOW
  # the rules field is not specified, and the policy will never match.
