tests/istio_testcases/example_policies/bookinfo-demo/bookinfo-policy-test-operation-deny-example.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-method-get
  namespace: default
spec:
  selector:
    matchLabels:
      app: details
  action: DENY
  rules:
    - to:
        - operation:
            methods: ["GET"]
