tests/istio_testcases/example_policies/bookinfo-demo/bookinfo-policy-test-pircipals-no-match.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "details-viewer-with-principal-regex"
  namespace: default
spec:
  selector:
    matchLabels:
      app: details
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/default/sa/bookinfo-new*"]
---
