tests/istio_testcases/example_policies/bookinfo-demo/bookinfo-policy-test-simple.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: testcase26-networkpolicy-istio
  namespace: default
spec:
  selector:
    matchLabels:
      app: productpage
  rules:
  - from:
    - source:
        principals:
          - cluster.local/ns/default/sa/bookinfo-ratings
    to:
    - operation:
        methods:
          - GET
